Fix content pushed to bottom layout bug in main-content area

--- a/frontend/src/app/layout/main-layout/main-layout.component.scss
+++ b/frontend/src/app/layout/main-layout/main-layout.component.scss
@@ -371,8 +371,6 @@
       #2E2A1E 100%
     );
   background-attachment: scroll;
-  min-height: 100%;
-  overflow-y: auto;
   position: relative;
   overflow-x: hidden;
 
